# Machine_Learning_Library_From_Scratch

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
examples/01_Naive_Bayes/: gnb_example.ipynb
examples/01_Naive_Bayes/data/: multinomial_nb_orders.csv
examples/02_KNN_and_Linear_Regression/: knn_example.ipynb  linear_regression_example.ipynb
examples/03_KNN_and_Logistic_Regression/: Logistic_regression_examples.ipynb  classification_knn_examples.ipynb
examples/04_PCA/: pca_examples.ipynb
testing/: bernouli_naive_bayes.py  gausian_naive_bayes.py  mutinomial_naive_bayes.py
vplearn/: __init__.py
vplearn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vplearn/_model/: __init__.py  instance_base.py  model.py  model_base.py
vplearn/classification/: __init__.py  knn.py  logistic_regression.py  perceptron.py  svm.py
vplearn/classification/naive_bayes/: __init__.py  bernouli_nb.py  gaussian_nb.py  mutinomial_for_category_data_guide.md  (+1 more)
vplearn/cluster/: __init__.py  dbscan.py  gmm.py  kmeans.py
vplearn/decomposition/: __init__.py  decomposition.py  pca.py
vplearn/dimensionality_reduction/: __init__.py  dim_reduction.py  lda.py  pca.py
vplearn/metrics/: __init__.py  _metric.py  accuracy.py  confusion_matrix.py  mae.py  mse.py  precision.py  r2.py  recall.py
vplearn/preprocessing/: __init__.py  encoding.py  model_selection.py
vplearn/regression/: __init__.py  knn.py  linear_regression.py
vplearn/regrestion/: __init__.py  knn.py  linear_regression.py  linear_regrestion.py
