[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vplearn"
version = "0.1.0"
description = "A custom machine learning library"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "seaborn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vplearn*"]
